--- a/pages/VoxelEngine.html
+++ b/pages/VoxelEngine.html
@@ -10,7 +10,7 @@
   <meta name="description" content="Game Dev, Programming, SIMD, GPU, Voxels">
 
   <link rel="stylesheet" href="/assets/main.css">
-  <link rel="canonical" href="http://localhost:4000/pages/VoxelEngine.html">
+  <link rel="canonical" href="https://niadb.github.io/pages/VoxelEngine.html">
   <link rel="alternate" type="application/rss+xml" title="Comehither" href="/feed.xml">
   
   
