--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
     <!-- nav -->
     <nav class="navbar navbar-expand-md navbar-dark navbar-custom fixed-top">
 
-        <a class="navbar-brand logo-image" href="Default.html"><img src="media/bsb_logo.png" loading="lazy"></a> 
-        <a class="gamename" href="Default.html" style = "color:var(--banana);font-size:x-large">Banana Slug Beach<alt="Banana Slug Beach"></a> 
+        <a class="navbar-brand logo-image" href="index.html"><img src="media/bsb_logo.png" loading="lazy"></a> 
+        <a class="gamename" href="index.html" style = "color:var(--banana);font-size:x-large">Banana Slug Beach<alt="Banana Slug Beach"></a> 
 
         <!-- Mobile Menu Toggle Button -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
