--- a/presskit.html
+++ b/presskit.html
@@ -57,8 +57,8 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-md navbar-dark navbar-custom fixed-top">
         <!-- Image Logo -->
-        <a class="navbar-brand logo-image" href="Default.html"><img src="media/bsb_logo.png" loading="lazy"></a> 
-        <a class="gamename" href="Default.html" style = "color:var(--banana);font-size:x-large">Banana Slug Beach<alt="Banana Slug Beach"></a> 
+        <a class="navbar-brand logo-image" href="index.html"><img src="media/bsb_logo.png" loading="lazy"></a> 
+        <a class="gamename" href="index.html" style = "color:var(--banana);font-size:x-large">Banana Slug Beach<alt="Banana Slug Beach"></a> 
         <!-- Mobile Menu Toggle Button -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-awesome fas fa-bars"></span>
